# medical_afa

./: .gitignore  CLAUDE.md  MEDICAL_README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
configs/: brats_attn_reg.yaml  coco_attn_reg.yaml  kits_attn_reg.yaml  lasc_attn_reg.yaml
datasets/: brats.py  coco.py  kits.py  lasc.py  medical_base.py
launch/: attn_reg_brats.slurm  attn_reg_kits.slurm  attn_reg_lasc.slurm
logs/: AFA_BRATS_224_198036.err  AFA_BRATS_224_198036.out  AFA_BRAT_224_198009.err  AFA_KITS_198060.err  AFA_KITS_198060.out  AFA_LASC_197831.err  AFA_LASC_197831.out  AFA_LASC_197845.err  AFA_LASC_197845.out  AFA_LASC_198014.err  AFA_LASC_198014.out  BRATS_KITS_197847.err
pretrained/: convert_pretrained_weights.py  download_pretrained.sh
scripts/: dist_train_brats.py  dist_train_coco.py  dist_train_kits.py  dist_train_lasc.py  gen_attn.py
utils/: dcrf.py  evaluate.py  imutils.py  medical_utils.py
wetr/: PAR.py  mix_transformer.py  model_attn_aff.py  model_bsl.py  segformer_head.py
