[project]
name = "afa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "imageio>=2.9.0",
    "importlib-metadata>=8.7.1",
    "matplotlib>=3.3.3",
    "mmcv>=1.3.17",
    "mmcv-full>=1.2.7",
    "numpy>=1.18.5",
    "omegaconf>=2.0.0",
    "pillow>=8.4.0",
    "scikit-learn>=1.0.1",
    "tensorboard>=2.20.0",
    "timm>=0.3.2",
    "torch>=1.7.1",
    "torchvision>=0.8.2",
    "tqdm>=4.46.1",
]

[tool.uv.extra-build-dependencies]
scikit-learn = ["distutils.msvccompiler"]
